--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     <a href="./task-9-7/task-3.html" target="_blank">Task 3</a><br>
 
     </div>
+
+    <div>
+        <h2>Task 10-7</h2>
+    
+        <a href="./task-10-7/task1.html" target="_blank">Task 1 </a>
+    
+        </div>
    
 </body>
 </html>
