--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <h2>Task 10-7</h2>
     
         <a href="./task-10-7/task1.html" target="_blank">Task 1 </a>
+        <a href="./task-10-7/task2.html" target="_blank">Task 2 </a>
     
         </div>
    
