--- a/index.html
+++ b/index.html
@@ -50,10 +50,28 @@
     <div>
         <h2>Task 10-7</h2>
     
-        <a href="./task-10-7/task1.html" target="_blank">Task 1 </a>
+        <a href="./task-10-7/task1.html" target="_blank">Task 1 </a> <br>
         <a href="./task-10-7/task2.html" target="_blank">Task 2 </a>
     
         </div>
+
+
+            <div>
+                <h2>Task 12-7</h2>
+                <a href="./task-12-7/tasl1-5.html" target="_blank">Task 1 </a> <br>
+                <a href="./task-12-7/task6-10.html" target="_blank">Task 2 </a>  <br>
+                <a href="./task-12-7/task11-15.html" target="_blank">Task 3 </a> <br>
+                <a href="./task-12-7/task17-21.html" target="_blank">Task 4 </a>
+                </div>
+
+
+            <div>
+                <h2>Task 16-7</h2>
+                <a href="./task16-7/Es6-task.html" target="_blank">Es6 Tasks </a> <br>
+                <a href="./task16-7/Fech-task.html" target="_blank">ForEach Tasks </a> <br>
+                <a href="./task16-7/mapping.html" target="_blank">Map Tasks </a> <br>
+                </div>
+
    
 </body>
 </html>
